--- a/src/main/resources/application-PT.properties
+++ b/src/main/resources/application-PT.properties
@@ -1,34 +1,12 @@
-#spring.data.mongodb.uri=mongodb://localhost/test
 app.version=${project.version}
-spring.data.mongodb.host=nb-pt-otp-dbcollection-primary.pttools.com
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=zomatoconnector
-spring.data.mongodb.username=
-spring.data.mongodb.password=
-swagger.host=nb-pt-merchant-service-elb.pttools.com
-#service.merchant.domain=http://merchant-platform.iwanto.in
-service.location.domain=http://nb-pt-location-service-elb.pttools.com
-
-###################### HTTP encoding (HttpEncodingProperties)
-spring.http.encoding.charset=UTF-8
-spring.http.encoding.enabled=true
-spring.http.encoding.force=true
+#swagger.host=nb-qa-merchantservice-elb.nbtools.com
 
 server.tomcat.access-log-enabled=true
 server.tomcat.access-log-pattern=%a %l %u %t %U %m %H %s %b %D "%{User-Agent}i"
 server.tomcat.basedir=/tmp
 
-service.pubsub.domain=http://nb-pubsub.iwanto.in
+xmpp.server=chat1.iwanto.in
+xmpp.port=5222
 
-service.merchant.domain=http://nb-pt-merchant-service-elb.pttools.com
-
-service.email.domain=http://nb-pt-email-service-elb.pttools.com
-
-zomato.connector.sync.cron.expression=0 0 1 * * ?
-
-zomato.connector.sync.emailTo=sunny.sharma@nearbuy.com
-
-zomato.city.ids=1
-stark.service.domain=http://nb-qa-stark.nbtools.com/fox
-
-storage.service.domain=http://nb-qa-storage-elb.nbtools.com/
+admin.username=nearbuy
+admin.password=s4d2fg4@f&3h7g!
