--- a/src/main/resources/application-QA.properties
+++ b/src/main/resources/application-QA.properties
@@ -1,35 +1,12 @@
-#spring.data.mongodb.uri=mongodb://localhost/test
 app.version=${project.version}
-#swagger.host=merchant-platform.iwanto.in
-
-#service.merchant.domain=http://merchant-platform.iwanto.in
-#service.location.domain=http://nb-qa-location.nbtools.com
-service.location.domain=http://locationelastic.iwanto.in
-
-###################### HTTP encoding (HttpEncodingProperties)
-spring.http.encoding.charset=UTF-8
-spring.http.encoding.enabled=true
-spring.http.encoding.force=true
+#swagger.host=nb-qa-merchantservice-elb.nbtools.com
 
 server.tomcat.access-log-enabled=true
 server.tomcat.access-log-pattern=%a %l %u %t %U %m %H %s %b %D "%{User-Agent}i"
 server.tomcat.basedir=/tmp
 
-service.deal.domain=http://deal-service.iwanto.in
+xmpp.server=chat1.iwanto.in
+xmpp.port=5222
 
-service.pubsub.domain=http://nb-pubsub.iwanto.in
-
-service.merchant.domain=http://merchant-platform.iwanto.in
-
-service.email.domain=http://email-platform.iwanto.in
-
-#zomato.connector.sync.cron.expression=0 0 0/1 * * ?
-zomato.connector.sync.cron.expression=0 0 5 * * ?
-
-zomato.connector.sync.emailTo=sunny.sharma@nearbuy.com,anil.darji@nearbuy.com
-
-zomato.city.ids=1
-
-stark.service.domain=http://nb-qa-stark.nbtools.com/fox
-
-storage.service.domain=http://storage-service.iwanto.in/
+admin.username=nearbuy
+admin.password=s4d2fg4@f&3h7g!
