--- a/src/main/resources/application-STAG.properties
+++ b/src/main/resources/application-STAG.properties
@@ -1,36 +1,12 @@
-#spring.data.mongodb.uri=mongodb://localhost/test
 app.version=${project.version}
-spring.data.mongodb.host=nb-stag-db-zomatoconnector.stagtools.com
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=zomatoconnector
-spring.data.mongodb.username=
-spring.data.mongodb.password=
-service.location.domain=http://nb-stag-locationelastic-elb.stagtools.com
-
-###################### HTTP encoding (HttpEncodingProperties)
-spring.http.encoding.charset=UTF-8
-spring.http.encoding.enabled=true
-spring.http.encoding.force=true
+#swagger.host=nb-qa-merchantservice-elb.nbtools.com
 
 server.tomcat.access-log-enabled=true
 server.tomcat.access-log-pattern=%a %l %u %t %U %m %H %s %b %D "%{User-Agent}i"
 server.tomcat.basedir=/tmp
 
-service.pubsub.domain=http://nb-stag-pubsub-service-elb.stagtools.com
+xmpp.server=chat1.iwanto.in
+xmpp.port=5222
 
-service.merchant.domain=http://nb-stag-merchant-service-elb.stagtools.com
-
-service.email.domain=http://nb-stag-email-service-elb.stagtools.com
-
-#zomato.connector.sync.cron.expression=0 0 0/1 * * ?
-#zomato.connector.sync.cron.expression=0 0 15 * * ?
-zomato.connector.sync.cron.expression=0 0 8 * * ?
-
-zomato.connector.sync.emailTo=sunny.sharma@nearbuy.com,tanmay.gupta@nearbuy.com,anil.darji@nearbuy.com
-
-zomato.city.ids=6,1
-#zomato.city.ids=1,2,3,4,5,6,7,8,9,10,11,12,13,14,20,21,22,23,25,28,30,32,33,34,35,36,37,38,11054
-
-stark.service.domain=http://nb-stag-merchant-cms-service-elb.stagtools.com/fox
-
-storage.service.domain=http://nb-stag-storage-service-elb.stagtools.com/
+admin.username=nearbuy
+admin.password=s4d2fg4@f&3h7g!
