--- a/src/main/resources/application-LOCAL.properties
+++ b/src/main/resources/application-LOCAL.properties
@@ -1,30 +1,13 @@
-#spring.data.mongodb.uri=mongodb://localhost/test
 #app.version=${project.version}
 server.port=8446
 swagger.host=localhost:${server.port}
-
-#service.location.domain=http://location-platform.iwanto.in
-service.location.domain=http://locationelastic.iwanto.in
 
 server.tomcat.access-log-enabled=true
 server.tomcat.access-log-pattern=%a %l %u %t %U %m %H %s %b %D "%{User-Agent}i"
 server.tomcat.basedir=/tmp
 
-service.pubsub.domain=http://nb-pubsub.iwanto.in
+xmpp.server=chat1.iwanto.in
+xmpp.port=5222
 
-#service.merchant.domain=http://merchant-platform.iwanto.in
-
-service.merchant.domain=http://localhost:8445
-
-service.email.domain=http://email-platform.iwanto.in
-
-#zomato.connector.sync.cron.expression=0 0/15 * * * ?
-zomato.connector.sync.cron.expression=0 0/5 * * * ?
-
-zomato.connector.sync.emailTo=sunny.sharma@nearbuy.com
-
-zomato.city.ids=6
-
-stark.service.domain=http://localhost:8080/fox
-
-storage.service.domain=http://storage-service.iwanto.in/
+admin.username=nearbuy
+admin.password=s4d2fg4f3h7g
