Changes for swagger

--- a/src/main/resources/application-QA.properties
+++ b/src/main/resources/application-QA.properties
@@ -1,5 +1,5 @@
 app.version=${project.version}
-#swagger.host=nb-qa-merchantservice-elb.nbtools.com
+swagger.host=xmppservice.iwanto.in
 
 server.tomcat.access-log-enabled=true
 server.tomcat.access-log-pattern=%a %l %u %t %U %m %H %s %b %D "%{User-Agent}i"
