Added public xmpp server url

--- a/src/main/resources/application-STAG.properties
+++ b/src/main/resources/application-STAG.properties
@@ -5,7 +5,7 @@ server.tomcat.access-log-enabled=true
 server.tomcat.access-log-pattern=%a %l %u %t %U %m %H %s %b %D "%{User-Agent}i"
 server.tomcat.basedir=/tmp
 
-xmpp.server=chat1.iwanto.in
+xmpp.server=chat.nearbuystag.in
 xmpp.port=5222
 
 admin.username=nearbuy
