--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,24 @@
             <version>2.4.0</version>
         </dependency>
 
+        <dependency>
+        	<groupId>org.igniterealtime.smack</groupId>
+        	<artifactId>smack-extensions</artifactId>
+        	<version>4.1.7</version>
+        </dependency>
+        
+        <dependency>
+    <groupId>rocks.xmpp</groupId>
+    <artifactId>xmpp-core-client</artifactId>
+    <version>0.7.4</version>
+</dependency>
+<dependency>
+    <groupId>rocks.xmpp</groupId>
+    <artifactId>xmpp-extensions-client</artifactId>
+    <version>0.7.4</version>
+</dependency>
+
+
 	</dependencies>
 
 	<build>
