--- a/src/main/resources/application-PROD.properties
+++ b/src/main/resources/application-PROD.properties
@@ -1,13 +1,13 @@
 #spring.data.mongodb.uri=mongodb://localhost/test
 app.version=${project.version}
-#swagger.host=nb-prod-merchantservice-elb.nbtools.com
+swagger.host=xmppservice.nearbuyg.com
 
 server.tomcat.access-log-enabled=true
 server.tomcat.access-log-pattern=%a %l %u %t %U %m %H %s %b %D "%{User-Agent}i"
 server.tomcat.basedir=/tmp
 
-xmpp.server=chat1.iwanto.in
+xmpp.server=xmpp.nearbuy.com
 xmpp.port=5222
 
 admin.username=nearbuy
-admin.password=s4d2fg4f3h7g
+admin.password=s2sdf2dfs5gfjknv9810vks
